--- a/CSS/style.css
+++ b/CSS/style.css
@@ -47,7 +47,7 @@ body {
   min-height: -moz-max-content;
   min-height: max-content;
   max-height: 100vh;
-  background-color: rgba(112, 112, 112, 0.5);
+  background-color: rgba(58, 58, 58, 0.5);
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
   padding: 16px;
@@ -113,6 +113,7 @@ body {
 }
 
 .imgName {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -213,6 +214,128 @@ body {
     font-size: 12px;
     text-align: center;
     padding: 4px;
+  }
+}
+
+.arrow {
+  min-width: 50px;
+  width: 20%;
+  height: 100%;
+  right: 0;
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.line {
+  position: relative;
+  content: "";
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  border-right: 8px solid #eee;
+  border-top: 8px solid #eee;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.line:hover {
+  width: 65px;
+  height: 65px;
+}
+
+.left {
+  right: none;
+  left: 0;
+}
+
+.left .line {
+  -webkit-transform: rotate(-135deg);
+          transform: rotate(-135deg);
+}
+
+.disableArrow {
+  pointer-events: none;
+  opacity: 0.1;
+}
+
+.modal {
+  position: absolute;
+  z-index: 5;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(2, 2, 2, 0.8);
+  display: none;
+}
+
+.modal .contModal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.open {
+  display: block;
+}
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: solid 6px #f7f7f7;
+  border-radius: 50%;
+  border-top-color: transparent;
+  -webkit-animation: spin 1s infinite;
+          animation: spin 1s infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 /*# sourceMappingURL=style.css.map */
