--- a/CSS/style.css
+++ b/CSS/style.css
@@ -246,7 +246,7 @@ body {
   position: absolute;
   z-index: 5;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(2, 2, 2, 0.8);
   display: none;
 }
