--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -256,4 +256,10 @@ body{
     .container{
         max-height: none;
     }
+    .conteGral{
+        position: relative;
+    }
+    .modal{
+        height: 100%;
+    }
 }
